--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="app.js" type="module" async></script>
+    <script src="HTML.js" type="module" async></script>
 </head>
 <body>
     <div id="result"></div>
-    <script src="app.js"></script>
+
 </body>
 </html>
